--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     <h1>Welcome to the Library</h1>
+    <p>We offer a wide range of books and resources for all ages.</p>
 </body>
 </html>
