href to about.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Library Website</title>
+    <a href="about.html">About Us</a>
 </head>
 <body>
     <h1>Welcome to the Library</h1>
