describe collection of games

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Welcome to the Library</h1>
     <a href="about.html">About Us</a>
-    <p>We offer a wide range of books and resources for all ages.</p>
+    <p>We offer a wide collection of games and resources for all ages.</p>
 </body>
 </html>
