--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Welcome to the Library</h1>
     <a href="about.html">About Us</a>
     <p>We offer a wide collection of games and resources for all ages.</p>
+    <p>We offer a wide stock of goods and resources for all ages.</p>
 </body>
 </html>
